--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,17 @@
   }
 }
 
+@layer utilities {
+  .hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;  /* Chrome, Safari and Opera */
+  }
+}
+
 /* Safari-compatible dropdown styles */
 select {
   -webkit-appearance: none;
